feat: доработать логику дружбы между пользователями

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-# ??????? ???????????
+# Logging Level
 logging.level.org.springframework.web.servlet.DispatcherServlet=info
-# ??????? ??? ?????? ?????????? storage (inMemory, BD)
+# Profile for storage (inMemory, BD)
 spring.profiles.active=inMemory
 spring.main.allow-bean-definition-overriding=true
-# ????????? ??
+# settings for DB
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:file:./db/filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-# ???? ??? ????????????? ??????
+# Path for Initializers
 genres.file.path=./src/main/java/ru/yandex/practicum/filmorate/data/genres.csv
 mpa.file.path=./src/main/java/ru/yandex/practicum/filmorate/data/mpa.csv
