feat: добавить хранение данных в БД

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Logging Level
 logging.level.org.springframework.web.servlet.DispatcherServlet=info
-# Profile for storage (inMemory, BD)
-spring.profiles.active=inMemory
+# Profile for storage (inMemory, inDb)
+spring.profiles.active=inDb
 spring.main.allow-bean-definition-overriding=true
 # settings for DB
 spring.sql.init.mode=always
